Added detailed info

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
-This is a project for Dr. Jaime Nino's CSCI 4210 Class
+Course: CSCI 4210
+Instructor: Dr. Nino
+Project: Collaborative Text Editor
+Authors: Manuel, Melissa, Kyle, Andre
